--- a/careForOurSeniors.html
+++ b/careForOurSeniors.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>HOME PAGE</h1>
-<p>(STUFF ABOUT THE WEBSITE)</p>
+<p>(STUFF ABOUT THE WEBSITE YADDA YADDA YADDA)</p>
 
 </body>
 </html>                             
